// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should compile to descriptor (async) 1`] = `
Object {
  "customBlocks": Array [
    Object {
      "attrs": Object {},
      "source": "



















# @vue/component-compiler

> High level utilities for compiling Vue single file components

This package contains high level utilities that you can use if you are writing a plugin / transform for a bundler or module.
",
      "type": "documentation",
    },
    Object {
      "attrs": Object {
        "lang": "json",
        "locale": "ja",
      },
      "source": "



























{
  \\"msg\\": \\"hi!\\"
}
",
      "type": "i18n",
    },
  ],
  "scopeId": "data-v-744d8fb6",
  "script": Object {
    "code": "//
//
//
//
//

export default {
  data () {
    return { name: 'John Doe' }
  }
}
",
    "map": Object {
      "file": "foo.vue",
      "mappings": ";;;;;;AAMA;AACA;AACA;AACA;AACA",
      "names": Array [],
      "sourceRoot": "",
      "sources": Array [
        "foo.vue",
      ],
      "sourcesContent": Array [
        "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>

<documentation>
# @vue/component-compiler

> High level utilities for compiling Vue single file components

This package contains high level utilities that you can use if you are writing a plugin / transform for a bundler or module.
</documentation>

<i18n lang=\\"json\\" locale=\\"ja\\">
{
  \\"msg\\": \\"hi!\\"
}
</i18n>
",
      ],
      "version": 3,
    },
  },
  "styles": Array [
    Object {
      "code": "
.title {
  color: red;
}
",
      "errors": Array [],
      "map": Object {
        "file": "foo.vue",
        "mappings": ";AAcA;EACA,UAAA;AACA",
        "names": Array [],
        "sources": Array [
          "foo.vue",
        ],
        "sourcesContent": Array [
          "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>

<documentation>
# @vue/component-compiler

> High level utilities for compiling Vue single file components

This package contains high level utilities that you can use if you are writing a plugin / transform for a bundler or module.
</documentation>

<i18n lang=\\"json\\" locale=\\"ja\\">
{
  \\"msg\\": \\"hi!\\"
}
</i18n>
",
        ],
        "version": 3,
      },
      "media": undefined,
      "module": undefined,
      "moduleName": undefined,
      "scoped": undefined,
    },
  ],
  "template": Object {
    "code": "var render = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"h1\\", { staticClass: \\"title\\", attrs: { id: \\"test\\" } }, [
    _vm._v(\\"Hello \\" + _vm._s(_vm.name) + \\"!\\")
  ])
}
var staticRenderFns = []
render._withStripped = true
",
    "errors": Array [],
    "functional": false,
    "source": "
<h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
",
    "tips": Array [],
  },
}
`;

exports[`should compile to descriptor 1`] = `
Object {
  "customBlocks": Array [
    Object {
      "attrs": Object {},
      "source": "



















# @vue/component-compiler

> High level utilities for compiling Vue single file components

This package contains high level utilities that you can use if you are writing a plugin / transform for a bundler or module.
",
      "type": "documentation",
    },
    Object {
      "attrs": Object {
        "lang": "json",
        "locale": "ja",
      },
      "code": "const resource = {\\"msg\\":\\"hi!\\"}",
      "map": undefined,
      "source": "



























{
  \\"msg\\": \\"hi!\\"
}
",
      "type": "i18n",
    },
  ],
  "scopeId": "data-v-744d8fb6",
  "script": Object {
    "code": "//
//
//
//
//

export default {
  data () {
    return { name: 'John Doe' }
  }
}
",
    "map": Object {
      "file": "foo.vue",
      "mappings": ";;;;;;AAMA;AACA;AACA;AACA;AACA",
      "names": Array [],
      "sourceRoot": "",
      "sources": Array [
        "foo.vue",
      ],
      "sourcesContent": Array [
        "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>

<documentation>
# @vue/component-compiler

> High level utilities for compiling Vue single file components

This package contains high level utilities that you can use if you are writing a plugin / transform for a bundler or module.
</documentation>

<i18n lang=\\"json\\" locale=\\"ja\\">
{
  \\"msg\\": \\"hi!\\"
}
</i18n>
",
      ],
      "version": 3,
    },
  },
  "styles": Array [
    Object {
      "code": "
.title {
  color: red;
}
",
      "errors": Array [],
      "map": Object {
        "file": "foo.vue",
        "mappings": ";AAcA;EACA,UAAA;AACA",
        "names": Array [],
        "sources": Array [
          "foo.vue",
        ],
        "sourcesContent": Array [
          "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>

<documentation>
# @vue/component-compiler

> High level utilities for compiling Vue single file components

This package contains high level utilities that you can use if you are writing a plugin / transform for a bundler or module.
</documentation>

<i18n lang=\\"json\\" locale=\\"ja\\">
{
  \\"msg\\": \\"hi!\\"
}
</i18n>
",
        ],
        "version": 3,
      },
      "media": undefined,
      "module": undefined,
      "moduleName": undefined,
      "scoped": undefined,
    },
  ],
  "template": Object {
    "code": "var render = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"h1\\", { staticClass: \\"title\\", attrs: { id: \\"test\\" } }, [
    _vm._v(\\"Hello \\" + _vm._s(_vm.name) + \\"!\\")
  ])
}
var staticRenderFns = []
render._withStripped = true
",
    "errors": Array [],
    "functional": false,
    "source": "
<h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
",
    "tips": Array [],
  },
}
`;
